--- a/disp-wrapper-ros/CMakeLists.txt
+++ b/disp-wrapper-ros/CMakeLists.txt
@@ -180,6 +180,8 @@ include_directories(
 #   # myfile2
 #   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 # )
+catkin_install_python(PROGRAMS scripts/dispnet_wrapper.py
+                      DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
 # install the launch file
 install(DIRECTORY launch
